hack/hello-world.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    ephemera.dev/preview: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whoami
  name: whoami
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - image: traefik/whoami
          name: whoami
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whoami
  name: whoami
  namespace: hello
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: whoami
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: hello
spec:
  parentRefs:
    - name: ephemera
      namespace: ephemera-system
      sectionName: http
  hostnames:
    - hello.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: whoami
          port: 80
